# iex-tools

./: .gitignore
airflow/: .gitignore  startup.sh
airflow/dags/: process_iex.py  process_iex2.py
airflow/scripts/: download_pcap.py
convert-pcap/: Cargo.toml
convert-pcap/src/: iex.rs  main.rs  pcap_parser.rs  structs.rs
schemas/: convert_yaml.py  generate_schemas.py  hello.py  utils.py
schemas/yamls/structs/: AuctionInformationMessage.yaml  Ethernet2Header.yaml  Ipv4Header.yaml  MessageBlockHeader.yaml  OfficialPriceMessage.yaml  OperationalHaltStatusMessage.yaml  PcapHeader.yaml  PcapngEnhancedPacketBlock.yaml  PcapngInterfaceDescriptionBlock.yaml  PcapngSectionHeaderBlock.yaml  QuoteUpdateMessage.yaml  RetailLiquidityIndicatorMessage.yaml  SecurityDirectoryMessage.yaml  ShortSalePriceTestStatusMessage.yaml  SystemEventMessage.yaml  TradeBreakMessage.yaml  TradeReportMessage.yaml  TradingStatusMessage.yaml  TransportProtocolHeader.yaml  UdpHeader.yaml
scripts/: .gitignore  all_recompress.py  cron_db.py  download_all.py  full_links.csv  gen_h5.py  groundblock.py  gui.py  links.csv  main.py  server.py  test_bin_to_h5.py
scripts/backends/: dag_container.py  dag_db.py  dag_runner.py  server.py
scripts/randoms/: add_torrents.py  convert_links_to_h5.py  convert_pcapng_to_pcap.py  crontab  download_all.py  download_date.py  dtypes.py  gen_h5.py  generate_links.py  mark_downloaded.py  plot_appl.py  plot_h5.py  test_bin_to_h5.py
scripts/templates/: cannot_find_log.html  index.html  log.html
