[package]
name = "convert-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.5.16", features = ["derive"] }
flate2 = "1.0.33"
nom = "7.1.3"
pcap-parser = "0.15.0"
zstd = "0.13.0"
