[package]
name = "convert-pcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.8.0"
clap = { version = "4.5.21", features = ["derive"] }
flate2 = "1.0.35"
memmap2 = "0.9.5"
nom = "7.1.3"
pcap-parser = "0.15.0"
zerocopy = "0.8.23"
zerocopy-derive = "0.8.23"
zstd = "0.13.2"

[profile.release]
opt-level = 3
codegen-units = 1
target-cpu = "native"
lto = true
